--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "caramocha",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Create a website backend in less than a minute.",
   "main": "main.js",
+  "homepage": "https://william-mcgonagle.github.io/",
   "bin": {
     "caramocha": "./main.js"
   },
+  "devDependencies": {
+    "standard": "*"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && node main.js start;"
   },
   "repository": {
     "type": "git",
