--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "caramocha",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "description": "Create a website backend in less than a minute.",
   "main": "main.js",
   "bin": {
@@ -17,16 +17,27 @@
     "url": "git+https://github.com/William-McGonagle/caramocha.git"
   },
   "keywords": [
+    "cli",
+    "backend",
+    "generator",
+    "tool",
+    "command",
+    "CRUD",
+    "REST",
+    "HTTP",
     "website",
-    "create",
-    "Cophi.js",
-    "Cophi",
-    "caramocha"
+    "web",
+    "server",
+    "builder",
+    "npm",
+    "openAPI",
+    "node.js",
+    "express"
   ],
   "author": "William McGonagle",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/William-McGonagle/caramocha/issues"
   },
-  "homepage": "https://william-mcgonagle.github.io/",
+  "homepage": "https://william-mcgonagle.github.io/"
 }
